[package]
name = "ckb-error"
version = "0.115.0-rc2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "Underlying error types used over ckb crates"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
anyhow = { version = "1.0.63", default-features = false }
ckb-occupied-capacity = { path = "../occupied-capacity", version = "= 0.115.0-rc2" }
derive_more = { version = "0.99.0", default-features = false, features = ["display"] }
