[package]
name = "ckb-gen-types"
version = "0.115.0-rc3-offline"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "Provides the generated types for CKB."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dev-dependencies]
ckb-hash = { path = "../hash", version = "= 0.115.0-rc2" }

[features]
default = ["alloc"]
alloc= ["calc-hash", "check-data", "serialized-size"]
# Enable the `calc-hash` extension for CKB contract development in `no-std` env
calc-hash = ["ckb-hash/ckb-contract"]
# Enable the `check-data` extension for CKB contract development in `no-std` env
check-data = []
# Enable the `serialized-size` extension for CKB contract development in `no-std` env
serialized-size = ["calc-hash"]

[dependencies]
cfg-if = "1.0"
molecule = { version = "0.8.0", default-features = false }
ckb-hash = { path = "../hash", version = "= 0.115.0-rc2", default-features = false }
ckb-fixed-hash = { path = "../fixed-hash", version = "= 0.115.0-rc2-offline"}
ckb-error = { path = "../error", version = "= 0.115.0-rc2" }
ckb-occupied-capacity = { path = "../occupied-capacity", version = "= 0.115.0-rc2" }
numext-fixed-uint = { version = "0.2.6",  git = "https://github.com/KeystoneHQ/rust-numext.git" }
