[package]
name = "ckb-jsonrpc-types"
version = "0.115.0-rc2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "CKB common types for JSON serialization."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types = { path = "../types", version = "= 0.115.0-rc2", features=["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
faster-hex = { version = "0.9", default-features = false, features = ["alloc"] }
schemars = { version = "0.8.16", package = "ckb_schemars" }


[dev-dependencies]
proptest = "1.0"
regex = "1.1"
lazy_static = "1.3"
