[package]
name = "ckb-jsonrpc-types"
version = "0.115.0-rc2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "CKB common types for JSON serialization."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types = { path = "../types", version = "= 0.115.0-rc2", features=["alloc"] }
serde = { version = "1.0",  default-features = false, features = ["derive", "alloc"]  }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
faster-hex = { version = "0.9", default-features = false, features = ["alloc"] }
hashbrown = "0.14"


[dev-dependencies]
proptest = "1.0"
regex = "1.1"
lazy_static = "1.3"
