[package]
name = "ckb-types"
version = "0.115.0-rc2"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "Provides the essential types for CKB."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
molecule = {version = "0.7.5", default-features = false }
ckb-fixed-hash = { path = "../fixed-hash", version = "= 0.115.0-rc2-offline" }
numext-fixed-uint = { version = "0.2.6",  git = "https://github.com/KeystoneHQ/rust-numext.git", features=["support_serde"]}
bytes = { version="1", default-features=false, features = ["serde"] }
merkle-cbt = { version = "0.3", default-features=false }
ckb-occupied-capacity = { path = "../occupied-capacity", version = "= 0.115.0-rc2" }
ckb-hash = { path = "../hash", version = "= 0.115.0-rc2" }
ckb-constant = { path = "../constant", version = "= 0.115.0-rc2" }
ckb-gen-types = { path = "../gen-types", version = "0.115.0-rc3-offline" }
bit-vec = { version = "0.6.3", default-features = false }
ckb-error = { path = "../error", version = "= 0.115.0-rc2" }

ckb-rational = { path = "../rational", version = "= 0.115.0-rc2" }
once_cell = {  version = "1.8.0", default-features = false, features=["alloc", "critical-section"] }
derive_more = { version = "0.99.0", default-features=false, features = ["display"] }
ckb-merkle-mountain-range = {  version = "0.5.2", default-features=false }
# diable this moduel for now
# golomb-coded-set = "0.2.0"
# paste = "1.0"
hashbrown = "0.14"

[dev-dependencies]
proptest = "1.0"

[features]
default = ["alloc"]
alloc = []