[package]
name = "ckb-fixed-hash-core"
version = "0.115.0-rc2-offline"
license = "MIT"
authors = ["Nervos <dev@nervos.org>"]
edition = "2021"
description = "Provide several fixed-length binary data, aka fixed-sized hashes."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
faster-hex = { version = "0.9", default-features = false, features = ["alloc"] }
# schemars = { version = "0.8.16", package = "ckb_schemars", disable-features = false }



[dev-dependencies]
serde_json = "1.0"
